[package]
name = "fpm-importer"
version = "0.1.0"
authors = [
    "Wasif"
]
edition = "2021"
description = "Imports markdown and converts into FTD"

[dependencies]
anyhow = "1.0.28"
chrono = "0.4"
once_cell = "1"
env_logger = "0.10.0"
handlebars = "4.0"
log = "0.4"
memchr = "2.0"
opener = "0.5"
pulldown-cmark = { version = "0.9.1", default-features = false }
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1"
tempfile = "3.0"
toml = "0.5.1"
topological-sort = "0.2.2"


[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2"
select = "0.6.0"
semver = "1.0"
pretty_assertions = "1.2.1"
walkdir = "2.0"

