[package]
name = "fpm-importer"
version = "0.1.0"
authors = [
    "Wasif"
]
edition = "2021"
description = "Imports markdown and converts into FTD"

[dependencies]
anyhow = "1.0.28"
once_cell = "1"
handlebars = "4.0"
log = "0.4"
memchr = "2.0"
pulldown-cmark = { version = "0.9.1", default-features = false }
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1"
toml = "0.5.1"
topological-sort = "0.2.2"

